--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <<title>Garret Gang's Profile</title>
+    <title>Garret Gang's Profile</title>
   </head>
   <body>
     <h1>Garret Reier Gang</h1>
@@ -17,7 +17,7 @@
       <li> Polymorphic Encryptor</li>
       <li> Risk V CPU, partial implementation</li>
       <li> Lazer Tag Gun </li>
-      <li> Datalog Interpreter</li>s
+      <li> Datalog Interpreter</li>
     </ul>
     <h2>Work Experience in CE</h2>
       Research Intern, Cipherlock, Buda TX. from Jan 2019 to Jan 2020.
