Added a little more

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Garret Gang's Profile</title>
+    <<title>Garret Gang's Profile</title>
   </head>
   <body>
     <h1>Garret Reier Gang</h1>
@@ -9,15 +9,15 @@
     <p>Computer Engineering Senior. I am good at tinkering and solving problems.</p>
 
     <h3>More About Me</h3>
-    <p>I was born in Washington, moved 4 times to end up back where I started. I am the 2 of 7 siblings, and 5th of over 37 cousins. I have a twin brother who is a recent CS Graduate. I spent my summers growing up on my grandpa's farm. and am not afraid to get my hands dirty.</p>
+    <p>I was born in Pullman, Washington, moved 4 times to end up back where I started. I am the 2 oldest of 7 siblings, and 5th of over 37 cousins. I have a twin brother who is a recent CS Graduate, looks kinda like be but not quite as charming. I spent my summers growing up on my grandpa's farm, and enjoy hard work from that experience.</p>
 
     <h2>Projects</h2>
     <ul>
-      <li> Antenna Positioning Controller.</li>
+      <li> Antenna Positioning Controller</li>
       <li> Polymorphic Encryptor</li>
       <li> Risk V CPU, partial implementation</li>
       <li> Lazer Tag Gun </li>
-      <li> Datalog Interpreter</li>
+      <li> Datalog Interpreter</li>s
     </ul>
     <h2>Work Experience in CE</h2>
       Research Intern, Cipherlock, Buda TX. from Jan 2019 to Jan 2020.
@@ -28,3 +28,4 @@
      <a href="https://github.com/Verontrix">My Github</a>
   </body>
 </html>
+-m
